Fixing spacing of contact info

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
 }
 
 .contact{
-    padding: 20px;
+    padding-left: 20px;
 }
 
 header,footer{
